     especially to acquisition wrappers.

     N.B:  ExtensionClassType already declares that it supports GC
     (via the Py_TPFLAGS_HAVE_GC flag), but does not appear to conform
     to the rules for such a type laid out in the Python docs:
     http://docs.python.org/api/supporting-cycle-detection.html

  Zope 2.9.3 (UNRELEASED)

   Bugs fixed

      - Collector #2072: Applied patch to fix problem with overly restrictive
        __bobo_traverse__ security and tests.
      
      - Added missing Zope 3 packages: zope.app.intid, zope.app.keyreference, 
        zope.app.session, zope.contentprovider, zope.viewlet  


  Zope 2.9.2 (2006/03/27)

    Bugs fixed

      - Collector #2051: Applied patch by Yoshinori Okuji to fix some
        XML export/import problems, and added tests for that feature.

      - Missing import of NotFound in webdav.Resource.

      - Collector #2037: fixed broken ACTUAL_URL for '/'

      - Put the default skin interface on the request once it is
        created, both in ZPublisher and ZopeTestCase.

      - Updated Five to bugfix release 1.3.3.  See
        Products/Five/CHANGES.txt for more info.

  Zope 2.9.1  (2006/02/25)

    Bugs fixed

      - Collector #1819: fixed signature of
        MountedObject.SimpleTrailblazer._construct()

      - Collector #2019: removed validateValue() from cAccessControl (already
        removed in former Zope versions from the AccessControl Python
        implementation)

      - Collector #1991: ZPublisher did not deal properly with a trailing
        %20 in the URL

      - Collector #1989:  'test.py' now copyied to $ZOPE_HOME/bin
        during installation, which re-enables tests run from the instance
        home.

      - zope.app.introspector was not included with the source archive

      - Collector #2013: improved XHTML conformance of error messages,
        some of which did not close '<p>' tags.

      - Collector #1999: fixed broken FTP rename functionality